# nixos-config

./: .gitattributes  Readme.md  flake.lock1  flake.nix
home/: home.nix  overlay.nix
home/X/: default.nix
home/X/dwm/: default.nix
home/X/hyprland/: config.nix  default.nix
home/X/xmonad/: change-alias.diff  default.nix
home/desktop/: default.nix
home/desktop/dwm/: default.nix
home/desktop/picom/: default.nix
home/desktop/tabbed/: default.nix
home/desktop/xmonad/: default.nix
home/desktop/xmonad/config/: xmonad-tanish2002.cabal
home/desktop/xmonad/config/dist-newstyle/cache/: compiler  config
home/desktop/xmonad/config/src/: xmonad.hs
home/desktop/xmonad/config/src/Apps/: Alias.hs  Scratchpad.hs
home/desktop/xmonad/config/src/Bind/: KeyBoard.hs  Mouse.hs
home/desktop/xmonad/config/src/Config/: Options.hs
home/desktop/xmonad/config/src/Container/: Layout.hs
home/desktop/xmonad/config/src/Hooks/: EventHook.hs  LogHook.hs  ManageHook.hs
home/dev/: default.nix
home/dev/direnv/: default.nix
home/dev/emacs/: default.nix
home/dev/helix/: default.nix
home/dev/leetcode-cli/: default.nix
home/dev/nvim/: default.nix
home/programs/: default.nix
home/scripts/: default.nix
home/term/: default.nix
home/theming/: default.nix
home/wallpapers/: default.nix
home/wayland/: default.nix
overlays/: default.nix
overlays/plymouth-themes/: default.nix
system/: configuration.nix  hardware-configuration.nix  hardware-configuration2.nix  sharedConfig.nix
system/hosts/: anime.nix
theme/: catppuccin.nix  default.nix  flower.nix
(+53 files in other folders)
